- OpenRewrite: migrate to SpringBoot 3.2 - new SnakeYaml needs "LoaderOptions" in Constructor(Class,LoaderOptions) - new H2 does not like 'key' or 'value' as column names